PuenteTLS-UDP/iptables
# Generated by iptables-save v1.4.21 on Sun Dec  5 12:54:52 2021
*nat
:PREROUTING ACCEPT [16:740]
:INPUT ACCEPT [6:300]
:OUTPUT ACCEPT [5:332]
:POSTROUTING ACCEPT [5:332]
-A PREROUTING -i enp1s0 -p tcp -m tcp --dport 5061 -j DNAT --to-destination IPPrivada:5061
-A PREROUTING -i enp1s0 -p udp -m udp --dport 10000:19999 -j DNAT --to-destination IPPrivada
-A PREROUTING -i enp1s0 -p udp -m udp --dport 20000:30000 -j DNAT --to-destination IPPrivada
COMMIT
# Completed on Sun Dec  5 12:54:52 2021
# Generated by iptables-save v1.4.21 on Sun Dec  5 12:54:52 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -j RTPENGINE --id 0
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5061 -j ACCEPT
-A INPUT -p udp -m udp --dport 10000:19999 -j ACCEPT
-A INPUT -p udp -m udp --dport 20000:30000 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Sun Dec  5 12:54:52 2021
