PuenteTLS-UDP/iptables-twoboxes
# Generated by iptables-save v1.8.4 on Fri Oct 21 11:40:56 2022
*nat
:PREROUTING ACCEPT [172:8792]
:INPUT ACCEPT [164:8432]
:POSTROUTING ACCEPT [22:1523]
:OUTPUT ACCEPT [22:1523]
-A PREROUTING -i eth0 -p udp -m udp --dport 5080 -j DNAT --to-destination IPPrivada:5080
-A PREROUTING -i eth0 -p udp -m udp --dport 10000:19999 -j DNAT --to-destination IPPrivada
COMMIT
# Generated by iptables-save v1.8.4 on Fri Oct 21 11:40:56 2022
*filter
:INPUT ACCEPT [246:15304]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [114:24111]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s IPPrivadaKamailio/32 -d IPPrivada/32 -p udp -m udp --dport 5080 -j ACCEPT
-A INPUT -d IPPrivada/32 -p udp -m udp --dport 10000:19999 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Fri Oct 21 11:40:56 2022
